fix button-loading, visibility

--- a/src/shared/ui-kit/buttons/ButtonWithLoading/ui/ButtonWithLoading.module.scss
+++ b/src/shared/ui-kit/buttons/ButtonWithLoading/ui/ButtonWithLoading.module.scss
@@ -4,7 +4,6 @@
     .children {
         width      : fit-content;
         opacity    : 1;
-        visibility : visible;
         transition : var(--transition-fast);
     }
 
